# DecodeNcodeAnything

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  _config.yml  seq-dna1.cpp
app/: CMakeLists.txt  decode.cpp  encode.cpp
convert/: Makefile  convert
docs/: CMakeCXXCompilerId_8cpp.html  ReedSolomonTest_8cpp.html  ReedSolomonTest_8cpp_8o_8d.html  ReedSolomonTest_8cpp__incl.map  ReedSolomonTest_8cpp__incl.md5  ReedSolomon_8cpp_8o_8d.html  ReedSolomon__module_8cpp_8o_8d.html  annotated.html  classCodec-members.html  classCodec.html  classGaloisField-members.html  classGaloisField.html  classGaloisField__coll__graph.dot  classGaloisField__coll__graph.md5  classGzipProcessor-members.html  classGzipper.html  classOligo-members.html  classPoly-members.html  classPoly.html  classReedSolomon-members.html  classReedSolomon.html  classes.html  codec_8cpp.html  codec_8cpp__incl.dot  convert_8cpp.html  convert_8cpp__incl.map  convert_8hpp__dep__incl.dot  convert_8hpp__dep__incl.map  convert_8hpp__incl.md5  convert_8hpp_source.html  decode_8cpp.html  decode_8cpp__incl.dot  decode_8cpp__incl.md5  design.md  design_8md.html  dir_000023_000015.html  dir_0528c4b79bba27ac3e98d72f5985d8dd.html  dir_0528c4b79bba27ac3e98d72f5985d8dd_dep.dot  dir_221e4e3784a22dc0f4fa2e9efc39dcc1.html  dir_30bba10133af119ab09cced3e241d7cc.html  (+153 more)
docs/html/: CMakeCXXCompilerId_8cpp.html  README_8md.html  ReedSolomonTest_8cpp.html  ReedSolomonTest_8cpp__incl.dot  annotated.html  ccsds_8h.html  ccsds_8h__dep__incl.dot  ccsds_8h_source.html  char_8h.html  char_8h__dep__incl.dot  char_8h_source.html  classCodec-members.html  classCodec.html  classGaloisField-members.html  classGaloisField.html  classGaloisField__coll__graph.map  classGzipProcessor.html  classGzipper-members.html  classOligo-members.html  classOligo.html  classPoly-members.html  classPoly.html  classReedSolomon-members.html  classReedSolomon.html  classes.html  codec_8cpp.html  codec_8cpp_8o_8d.html  codec_8cpp__dep__incl.dot  codec_8cpp__dep__incl.map  codec_8cpp__dep__incl.md5  codec_8cpp__incl.dot  codec_8cpp__incl.map  codec_8cpp__incl.md5  conceptUnsignedInteger.html  concepts.html  convert_8cpp.html  convert_8cpp__incl.dot  convert_8cpp__incl.md5  convert_8hpp.html  convert_8hpp__dep__incl.md5  (+384 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  concepts_0.js  defines_0.js  defines_1.js  defines_10.js  defines_2.js  defines_3.js  defines_4.js  (+83 more)
docs/latex/: CMakeCXXCompilerId_8cpp.tex  annotated.tex  ccsds_8h.tex  ccsds_8h.tex.tmp  ccsds_8h__dep__incl.dot  char_8h.tex  char_8h__dep__incl.dot  classCodec.tex  classGaloisField.tex  classGaloisField__coll__graph.md5  classGzipper.tex  classOligo.tex  classPoly.tex  classReedSolomon.tex  codec_8cpp.tex  codec_8cpp__dep__incl.dot  codec_8cpp__dep__incl.md5  codec_8cpp__incl.dot  codec_8cpp__incl.md5  conceptUnsignedInteger.tex  concepts.tex  convert_8cpp.tex  convert_8cpp__incl.dot  convert_8cpp__incl.md5  convert_8hpp.tex  convert_8hpp__dep__incl.dot  convert_8hpp__dep__incl.md5  convert_8hpp__incl.dot  convert_8hpp__incl.md5  convert_8hpp_source.tex  cpu__mode__ppc_8c.tex  cpu__mode__ppc_8c__incl.dot  cpu__mode__unknown_8c.tex  cpu__mode__unknown_8c__incl.dot  cpu__mode__x86_8c.tex  cpu__mode__x86_8c__incl.dot  decode_8cpp.tex  decode_8cpp__incl.md5  decode__rs_8c.tex  decode__rs_8c__incl.dot  (+255 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_b.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+26 more)
encode/: CMakeLists.txt  encode.cpp
include/: codec.hpp  io.hpp  oligo.hpp  utils.hpp
modules/: CMakeLists.txt
oligo/: utils.cpp
oligodump/: Makefile  oligodump.cpp
revcom/: Makefile
scripts/: build.sh  ex.sh  gen_docs.sh  get_gc.sh  line_shuffler.sh  log.txt  plot_data.py  test.sh
src/: CMakeLists.txt  Makefile  codec.cpp  io.cpp  main  main.cpp  oligo.cpp  oligo.hpp  test.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  Makefile  ReedSolomonTest.cpp  revcom.cpp  seq-dna1.cpp  simulate_encoded_fastq.cpp  test.cpp  test_encode-decode.cpp  test_io.cpp  test_oligo.cpp  test_r-s.cpp  test_rs.cpp  test_utils.cpp
tmp/: README.md  convert.hpp
tmp/convert/: convert.cpp
utils/: Makefile  README.md.encode.random.fastq  gen_fastq  gen_fastq.cpp  gzip_processor  gzip_processor.cpp  oligodump.cpp  randomizer  randomizer.cpp
utils/convert/: main.cpp
utils/myRS/: Makefile  ReedSolomonTest.cpp  myRSmodule.cpp
utils/mygzip/: Makefile  mygzip.hpp  test.cpp
